--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -128,7 +128,7 @@
       "이 새로운 경매에 참여하려면 새로운 {contract_link} 계약을 승인해야합니다.",
     "get_started": "시작하다",
     "i_agree_with_auction_terms": "나는 {auction_terms_link}를 받아 들인다.",
-    "i_agree_with_other_terms":
+    "i_agree_with_main_terms":
       "나는 {decentraland_terms_link}와 {privacy_policy_link}을 받아 들인다.",
     "privacy_policy_link": "개인 정보 정책",
     "processing_tx": "거래 처리 중",
