--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -119,7 +119,7 @@
       "在开始之前，您只需要做两件事。首先，选择购买 LAND 的通证，然后授权合约在购买土地时能操作通证",
     "get_started": "开始吧",
     "i_agree_with_auction_terms": "我接受{auction_terms_link}",
-    "i_agree_with_other_terms":
+    "i_agree_with_main_terms":
       "我接受{decentraland_terms_link}和{privacy_policy_link}",
     "privacy_policy_link": "隐私政策",
     "processing_tx": "处理交易",
