feat: added banner for started and finished auction (#748)
* feat: added banner for started and finished auction

* fix: remove unnecessary async function

Co-Authored-By: cazala <juancazala@gmail.com>

* chore: updated translation

Co-Authored-By: cazala <juancazala@gmail.com>

* fix: close modal on homepage

* chore: use hasAuctionStarted helper

--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -100,7 +100,11 @@
     "your_parcel": "あなたの区画"
   },
   "auction": {
-    "description": "12月10日から土地を購入できるLANDオークションが開催されます",
+    "description_after_finish": "LANDオークションが終了しました！",
+    "description_after_start":
+      "LANDオークションが始まったので、今すぐLANDを買うことができます！",
+    "description_before_start":
+      "12月10日にLANDオークションに参加し、LANDを購入！",
     "title": "Decentraland LANDオークション"
   },
   "auction_finished": {
