--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -103,7 +103,10 @@
     "your_parcel": "Your parcel"
   },
   "auction": {
-    "description":
+    "description_after_finish": "The LAND auction has ended!",
+    "description_after_start":
+      "The LAND auction has started, participate and buy LAND before it ends!",
+    "description_before_start":
       "Participate in the LAND auction on December 10 and buy LAND!",
     "title": "Decentraland LAND Auction"
   },
