--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -119,6 +119,7 @@
     "title": "Auction Finished"
   },
   "auction_modal": {
+    "auction_terms_link": "LAND Auction Terms & Conditions",
     "authorization": "Authorization",
     "authorization_description":
       "Before you can purchase any LAND in the auction using {token}, you must first authorize the {contract_link} contract to access and operate it in your behalf",
@@ -126,13 +127,16 @@
     "confirmation": "Confirmation",
     "confirmation_description":
       "You are about to purchase {parcels} parcels of LAND for {price} {token}",
+    "decentraland_terms_link": "Terms of Service",
     "description":
       "There are just two things you need to do before you can start. First, you need to select the tokens you want to buy LAND with. Next, you have to authorize a new smart contract to access those tokens when you buy LAND.",
     "get_started": "Get started",
-    "i_agree_with_terms": "I accept the {terms_link}",
+    "i_agree_with_auction_terms": "I accept the {auction_terms_link}",
+    "i_agree_with_main_terms":
+      "I accept the {decentraland_terms_link} and the {privacy_policy_link}",
+    "privacy_policy_link": "Privacy Policy",
     "processing_tx": "Processing Transaction",
     "submit": "Proceed",
-    "terms_and_conditions": "Terms & Conditions",
     "tx_failed": "Transaction Failed",
     "video_tutorial": "Video Tutorial",
     "watch_tutorial": "Watch video tutorial"
