feat: conversion rate disclaimer

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -144,6 +144,8 @@
   "auction_page": {
     "available_parcels": "parcels available",
     "bid": "Purchase",
+    "conversion_disclaimer":
+      "* You must have at least {amount} {token} in your balance due to conversion fees",
     "description": "Find the LAND you want to buy",
     "empty_message":
       "Find the parcels you want to buy, and add them to your cart. For more help, watch the {video_tutorial_link}",
