--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -141,6 +141,7 @@
   "auction_page": {
     "available_parcels": "区画が販売中",
     "bid": "購入する",
+    "conversion_disclaimer": "*換算手数料のため、残高が{amount}以上必要です",
     "description": "購入したい土地(LAND)を選んで下さい",
     "empty_message":
       "購入したい土地を選んでカートに追加します。 詳しい参加方法を{video_tutorial_link}動画で観る",
