--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -147,6 +147,8 @@
   "auction_page": {
     "available_parcels": "colis disponibles",
     "bid": "Achat",
+    "conversion_disclaimer":
+      "* Vous devez avoir au moins {amount} {token} dans votre solde en raison des frais de conversion.",
     "description": "Trouvez le LAND que vous voulez acheter",
     "empty_message":
       "Trouvez les colis que vous souhaitez acheter et ajoutez-les à votre panier. ",
