--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -134,6 +134,8 @@
   "auction_page": {
     "available_parcels": "可拍土地",
     "bid": "购买",
+    "conversion_disclaimer":
+      "*由于转换费用，您的余额必须至少为{amount} {token}",
     "description": "找到想要购买的 LAND",
     "empty_message":
       "找到您想购买的土地，然后将其添加到购物车。如需更多帮助，可以观看视频教程 {video_tutorial_link}",
