--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -151,6 +151,8 @@
     "find_available_parcel": "사용 가능한 소포 찾기",
     "gas_price": "가스 가격",
     "land_price": "LAND 가격",
+    "max_amount_disclaimer":
+      "* {token}에 대한 Kyber 예비는 {amount} MANA를 거래하기에는 충분하지 않습니다.",
     "maximum_parcels_message":
       "단일 트랜잭션에서 {max} LAND 이상을 구매하려고 시도하면 실패합니다. ",
     "maximum_parcels_title": "거래 당 최대 LAND에 도달했습니다.",
