--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -308,7 +308,6 @@
     "service_unavailable": "サービスは利用できません",
     "settings": "設定",
     "sign_in": "サインイン",
-    "sign_in_notice": "アクセスするには{sign_in_link}する必要があります",
     "submit": "送信",
     "the_estate": "エステート",
     "the_parcel": "区画",
@@ -466,6 +465,9 @@
       "mobile":
         "{coinbase_link}や{imtoken_link}などのモバイルブラウザも使用することができます。"
     }
+  },
+  "sign_in_notice": {
+    "message": "このページにアクセスするにはウォレットに接続する必要があります"
   },
   "terms_modal": {
     "also_agree":
