--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -147,6 +147,7 @@
   "auction_page": {
     "available_parcels": "colis disponibles",
     "bid": "Achat",
+    "blog_post": "article de blog",
     "conversion_disclaimer":
       "* Vous devez avoir au moins {amount} {token} dans votre solde en raison des frais de conversion.",
     "description": "Trouvez le LAND que vous voulez acheter",
