--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -141,17 +141,17 @@
   "auction_page": {
     "available_parcels": "区画が販売中",
     "bid": "購入する",
+    "blog_post": "ブログ投稿",
     "conversion_disclaimer": "*換算手数料のため、残高が{amount}以上必要です",
     "description": "購入したい土地(LAND)を選んで下さい",
-    "empty_message":
-      "購入したい土地を選んでカートに追加します。 詳しい参加方法を{video_tutorial_link}動画で観る",
+    "empty_message": "購入したい小包を見つけてカートに追加します。",
     "find_available_parcel": "購入可能な区画を検索",
     "gas_price": "ガス価格",
     "land_price": "LAND単価",
     "max_amount_disclaimer":
       "* {token}のためのキーバー準備は、{amount} MANAを取引するには不十分です",
     "maximum_parcels_message":
-      "単一のトランザクションで{max}LAND以上を購入しようとすると失敗します。",
+      "単一のトランザクションで{max} LAND以上を購入しようとすると失敗します。",
     "maximum_parcels_title": "1トランザクションあたり最大LANDに達しました",
     "parcels": "区画数",
     "parcels_tooltip": "一度に購入できるのは{max}区画までです",
