--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -144,6 +144,7 @@
   "auction_page": {
     "available_parcels": "사용 가능한 소포",
     "bid": "매수",
+    "blog_post": "블로그 게시물",
     "conversion_disclaimer":
       "* 전환 비용으로 인해 적어도 {amount} {token}의 잔액이 있어야합니다.",
     "description": "구매하려는 LAND을 찾으십시오.",
