--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -137,8 +137,7 @@
     "available_parcels": "可拍土地",
     "bid": "购买",
     "blog_post": "博客文章",
-    "conversion_disclaimer":
-      "*由于转换费用，您的余额必须至少为{amount} {token}",
+    "conversion_disclaimer": "*由于转换费用，价格上涨了{fee}％",
     "description": "找到想要购买的 LAND",
     "empty_message":
       "找到您要购买的包裹，并将其添加到购物车。如需更多帮助，可以观看视频教程 {video_tutorial_link}",
