--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -149,7 +149,7 @@
     "bid": "Comprar",
     "blog_post": "entrada en el blog",
     "conversion_disclaimer":
-      "* Debe tener al menos {amount} {token} en su saldo debido a las tarifas de conversión",
+      "* El precio aumentó {fee}% debido a las tarifas de conversión.",
     "description": "Encuentra LAND que quieres comprar.",
     "empty_message":
       "Encuentre las parcelas que desea comprar y agréguelas a su carrito. Para más información, vea el {video_tutorial_link} o lea la {blog_post_link}",
