--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -151,7 +151,7 @@
     "bid": "Achat",
     "blog_post": "article de blog",
     "conversion_disclaimer":
-      "* Vous devez avoir au moins {amount} {token} dans votre solde en raison des frais de conversion.",
+      "* Le prix a augmenté de {fee}% en raison des frais de conversion",
     "description": "Trouvez le LAND que vous voulez acheter",
     "empty_message":
       "Trouvez les colis que vous souhaitez acheter et ajoutez-les à votre panier. ",
