--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -144,9 +144,10 @@
     "available_parcels": "区画が販売中",
     "bid": "購入する",
     "blog_post": "ブログ",
-    "conversion_disclaimer": "*換算手数料のため、残高が{amount}以上必要です",
+    "conversion_disclaimer": "*価格は変換手数料のために{fee}％増加しました",
     "description": "購入したい土地(LAND)を選んで下さい",
-    "empty_message": "購入したい区画を選んでカートに追加します。詳しい参加方法を{video_tutorial_link}動画で観る",
+    "empty_message":
+      "購入したい区画を選んでカートに追加します。詳しい参加方法を{video_tutorial_link}動画で観る",
     "find_available_parcel": "購入可能な区画を検索",
     "gas_price": "ガス価格",
     "land_price": "LAND単価",
