feat: sign in inplace (#773)
* feat: SignIn in place

* feat: reuse components

* feat: add title to sign in notice

* feat: move padding to sign in notice message

* feat: auction for everyone

* style: center sign in notice in screen

* style: algin navbar hamburger menu with sign in and account menu

--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -325,8 +325,6 @@
     "service_unavailable": "Service indisponible",
     "settings": "Paramètres",
     "sign_in": "Se connecter",
-    "sign_in_notice":
-      "Vous devez vous connecter sur {sign_in_link} pour acceder a cette page",
     "submit": "Envoyer",
     "the_estate": "le domaine",
     "the_parcel": "la parcelle",
@@ -489,6 +487,10 @@
       "mobile":
         "Vous pouvez utiliser des navigateurs mobiles tels que {coinbase_link} ou {imtoken_link}."
     }
+  },
+  "sign_in_notice": {
+    "message":
+      "Vous devez connecter votre portefeuille pour accéder à cette page."
   },
   "terms_modal": {
     "also_agree":
