--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -315,7 +315,6 @@
     "service_unavailable": "서비스를 사용할 수 없음",
     "settings": "설정",
     "sign_in": "로그인",
-    "sign_in_notice": "이 페이지에 액세스하려면 {sign_in_link}해야합니다.",
     "submit": "제출",
     "the_estate": "재산",
     "the_parcel": "소포",
@@ -473,6 +472,9 @@
       "mobile":
         "{coinbase_link} 또는 {imtoken_link}과 같은 모바일 브라우저를 사용할 수 있습니다."
     }
+  },
+  "sign_in_notice": {
+    "message": "이 페이지에 액세스하려면 지갑을 연결해야합니다."
   },
   "terms_modal": {
     "also_agree":
