--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -234,6 +234,11 @@
     "new_selection": "请在地图上选择地块",
     "tx_to_be_send": "您将向 {action} 土块发送交易：{parcels}"
   },
+  "fatfinger_modal": {
+    "description": "您将发布{price}的tk1",
+    "error": "价格不符合",
+    "re-enter": "请重新输入价格进行确认"
+  },
   "footer": {
     "color_key": "图示",
     "copyright": "© 2018 Decentraland。保留所有权利。",
